port to 26.1.2 (lava to water WIP)