@@ -1,5 +1,7 @@
 package com.github.gameringop.mixin;
 
+import com.llamalad7.mixinextras.injector.ModifyExpressionValue;
+import com.llamalad7.mixinextras.sugar.Local;
 import net.minecraft.client.Camera;
 import net.minecraft.core.Holder;
 import net.minecraft.util.Mth;
@@ -14,20 +16,16 @@ import org.spongepowered.asm.mixin.injection.callback.CallbackInfoReturnable;
 
 import static com.github.gameringop.features.impl.misc.Camera.*;
 
-
 @Mixin(Camera.class)
 public abstract class MixinCamera {
-
-    @Shadow private float partialTickTime;
     @Shadow private float eyeHeightOld;
     @Shadow private float eyeHeight;
 
     @Shadow
-    protected abstract void setPosition(double d, double e, double f);
+    protected abstract void setPosition(double x, double y, double z);
 
-
-    @Redirect(method = "setup", at = @At(value = "INVOKE", target = "Lnet/minecraft/client/Camera;setPosition(DDD)V"))
-    private void redirectSetPosition(Camera instance, double x, double y, double z) {
+    @Redirect(method = "alignWithEntity", at = @At(value = "INVOKE", target = "Lnet/minecraft/client/Camera;setPosition(DDD)V"))
+    private void redirectSetPosition(Camera instance, double x, double y, double z, @Local(argsOnly = true) float partialTicks) {
         if (INSTANCE.enabled && getLegacySneakHeight().getValue()) {
             float standingHeight = 1.62f;
             float sneakingHeight = 1.27f;
@@ -39,34 +37,44 @@ public abstract class MixinCamera {
             float maxOffset = targetHeight - sneakingHeight;
             float totalCrouchDistance = standingHeight - sneakingHeight;
 
-            float currentEyeHeight = Mth.lerp(this.partialTickTime, this.eyeHeightOld, this.eyeHeight);
+            float currentEyeHeight = Mth.lerp(partialTicks, eyeHeightOld, eyeHeight);
 
             if (currentEyeHeight < standingHeight) {
                 double crouchAmount = (standingHeight - currentEyeHeight) / totalCrouchDistance;
-                crouchAmount = Math.max(0, Math.min(1, crouchAmount));
+                crouchAmount = Math.clamp(crouchAmount, 0, 1);
                 double animatedOffset = crouchAmount * maxOffset;
 
-                this.setPosition(x, y + animatedOffset, z);
+                setPosition(x, y + animatedOffset, z);
                 return;
             }
         }
 
-        this.setPosition(x, y, z);
+        setPosition(x, y, z);
     }
 
-    @Redirect(method = "setup", at = @At(value = "INVOKE", target = "Lnet/minecraft/world/entity/LivingEntity;getAttributeValue(Lnet/minecraft/core/Holder;)D"))
-    private double setCameraDistance(LivingEntity instance, Holder<Attribute> holder) {
+    @Redirect(method = "alignWithEntity", at = @At(value = "INVOKE", target = "Lnet/minecraft/world/entity/LivingEntity;getAttributeValue(Lnet/minecraft/core/Holder;)D"))
+    private double setCameraDistance(LivingEntity instance, Holder<Attribute> attribute) {
         if (INSTANCE.enabled && getCustomCameraDistance().getValue()) {
             return getCameraDistance().getValue().doubleValue();
         }
 
-        return instance.getAttributeValue(holder);
+        return instance.getAttributeValue(attribute);
     }
 
     @Inject(method = "getMaxZoom", at = @At("HEAD"), cancellable = true)
-    private void onGetMaxZoom(float f, CallbackInfoReturnable<Float> cir) {
+    private void onGetMaxZoom(float cameraDist, CallbackInfoReturnable<Float> cir) {
         if (INSTANCE.enabled && getNoCameraClip().getValue()) {
-            cir.setReturnValue(f);
+            cir.setReturnValue(cameraDist);
         }
+    }
+
+    @Inject(method = "calculateFov", at = @At(value = "RETURN"), cancellable = true)
+    private void calculateFovHook(float partialTicks, CallbackInfoReturnable<Float> cir) {
+        cir.setReturnValue(INSTANCE.enabled && getCustomFOV().getValue() ? getCustomFOVSlider().getValue().floatValue() : cir.getReturnValue());
+    }
+
+    @ModifyExpressionValue(method = "createProjectionMatrixForCulling", at = @At(value = "INVOKE", target = "Ljava/lang/Math;max(FF)F"))
+    private float getMaxFov(float original) {
+        return INSTANCE.enabled && getCustomFOV().getValue() ? getCustomFOVSlider().getValue().floatValue() : original;
     }
 }
